[workspace]
members = ["stunny-core", "stunny-client", "stunny-server"]
resolver = "2"

[profile.dev]
opt-level = 3

[workspace.dependencies]
log = "0.4.33"
thiserror = "2.0.18"
derive_more = { version = "2.1.1" }
futures-util = { version = "0.3.32", default-features = false }
local_async_utils = { version = "0.2.13", features = ["tokio"] }
simple_logger = { version = "5.0.0" }
tokio-test = "0.4.5"
