[package]
name = "stunny-core"
version = "0.1.0"
edition = "2021"
authors = ["Mikhail Vasilyev <mikail.vasilyev@gmail.com>"]
description = "STUN message parsing and transport protocols"
repository = "https://github.com/DanglingPointer/stunny"
license = "Apache-2.0"

[features]
default = []
udp = []
tcp = []
tls = ["dep:tokio-rustls"]

[dependencies]
log = { workspace = true }
thiserror = { workspace = true }
derive_more = { workspace = true, features = ["debug"] }
futures-util = { workspace = true }
bitvec = { version = "1.1.1", default-features = false, features = ["alloc"] }
bytes = "1.12.1"
tokio = { version = "1.48.0", default-features = false, features = [
    "net",
    "sync",
    "io-util",
    "macros",
    "rt",
    "time",
] }
tokio-rustls = { version = "0.26.4", default-features = false, optional = true, features = [
    "tls12",
    "aws_lc_rs",
] }

[dev-dependencies]
simple_logger = { workspace = true }
tokio-test = { workspace = true }
futures = "0.3.32"
local_async_utils = { workspace = true }
