[package]
name = "stunny-server"
version = "0.1.0"
edition = "2021"
authors = ["Mikhail Vasilyev <mikail.vasilyev@gmail.com>"]
description = "STUN server functionality"
repository = "https://github.com/DanglingPointer/stunny"
license = "Apache-2.0"

[features]
default = []
udp = ["stunny-core/udp"]

[dependencies]
log = { workspace = true }
thiserror = { workspace = true }
derive_more = { workspace = true, features = ["debug"] }
futures-util = { workspace = true }
stunny-core = { path = "../stunny-core", default-features = false }
tokio = { version = "1.42.0", default-features = false, features = [
    "sync",
    "macros",
] }
async-trait = "0.1.83"

[dev-dependencies]
simple_logger = { workspace = true }
tokio-test = { workspace = true }
tokio = { version = "1.42.0", features = ["rt-multi-thread"] }
